Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-08-15 (SVN):
    * utils/jsh2color/tex.c: merged to jscolor.c. minor cleanups.
      (ParseDefFile): fixed lazy declaration of the FILE pointer.
      (FindTexlightColorExt): start the search at index 0, not 1.
      accept a pointer to a tex_col_list as the last param, not
      a tex_col_list structure itself.

2012-08-12 (SVN):
    * oslibs/dos: recompile codec libs by removing unnecessary NULL ptr
      checks (since we are using Z_Malloc() and friends, alloc failures
      are Sys_Error(), and the returned memory is zero filled, as well).

2012-08-10 (SVN):
    * docs/COMPILE: updated for osx x86_64 cross-toolchain instructions.

2012-08-10 (SVN):
    * midi_osx.c: use MusicSequenceLoadSMFData() in ppc builds, instead
      of MusicSequenceLoadSMFDataWithFlags(). the former works back to
      10.2, whereas the latter requires 10.3 and newer. we already call
      MusicSequenceLoadSMFDataWithFlags() with zero as the flags value,
      which makes it equivalent to calling MusicSequenceLoadSMFData().

2012-08-10 (SVN):
    * midi_osx.c: use AUGraphAddNode() also with 10.5. we were using it
      only with 10.6+ because of struct AudioComponentDescription being
      only in SDK 10.6+. AudioComponentDescription is actually the same
      as ComponentDescription with 20 bytes of size and same offsets of
      all members, therefore, is binary compatible, so we simply define
      AudioComponentDescription as ComponentDescription when compiling
      against 10.5 SDK.
    * midi_mac.c: include Carbon/Carbon.h instead of Sound.h so that it
      compiles. added #error directive against 64 bit compile attempts.
    * updated version date stamp to 2012-08-10.

2012-08-08 (SVN):
    * midi_osx.c: include CoreServices/CoreServices.h to fix compilation
      against 10.6 SDK.

2012-08-08 (SVN):
    * oslibs: recompiled x86_64 versions of osx codecs against 10.6 SDK