@@ -6,6 +6,7 @@ Development Progress	:
 2012-08-15 (SVN):
     * utils/jsh2color/tex.c: merged to jscolor.c. minor cleanups.
       (ParseDefFile): fixed lazy declaration of the FILE pointer.
+      check sscanf success properly.
       (FindTexlightColorExt): start the search at index 0, not 1.
       accept a pointer to a tex_col_list as the last param, not
       a tex_col_list structure itself.
